--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maze Generator & Solver</title>
+    <title>Giving direction to Maze</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Maze Generator & Solver</h1>
+    <h1>Giving direction to Maze</h1>
 
 	<div class="control-group">
-	    <label for="commandInput">指示 (F:前, R:右, L:左)</label>
+	    <label for="commandInput">指示でその方向に1マス進む (F:前, R:右, L:左) </label>
 	    <div style="display: flex; gap: 5px;">
 	        <input type="text" id="commandInput" value="" style="width: 150px; text-transform: uppercase;" placeholder="例: FFRF">
 	        <button id="btnCommand">実行</button>
