--- a/instructor.html
+++ b/instructor.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>迷路指示受信結果</title>
+    <title>受信結果一覧</title>
     <link rel="stylesheet" href="sendcommand.css">
 </head>
 <body>
 
-    <h1>受信指示</h1>
+    <div class="header">
+        <h1>受講生の回答</h1>
+        <button id="resetBtn" class="danger-btn">データをリセット</button>
+    </div>
+
     <div id="results"></div>
 
     <script type="module" src="sendcommand.js"></script>
