--- a/student.html
+++ b/student.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="input-group">
-        <label>命令 (F, R, Lのみ)</label>
+        <label>指示 (F:前進、R:右進、L:左進)</label>
         <input type="text" id="inputCommand" placeholder="FFRFL">
     </div>
 
