--- a/student.html
+++ b/student.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>コマンド送信</title>
+    <title>迷路指示送信</title>
     <link rel="stylesheet" href="sendcommand.css">
 </head>
 <body>
 
-    <h2>コマンド送信</h2>
+    <h2>迷路指示送信</h2>
     
     <div class="input-group">
         <label>名前</label>
@@ -16,7 +16,7 @@
     </div>
 
     <div class="input-group">
-        <label>指示 (F:前進、R:右進、L:左進)</label>
+        <label>指示（前進：F、右進：R、左進：L）</label>
         <input type="text" id="inputCommand" placeholder="FFRFL">
     </div>
 
