--- a/student.html
+++ b/student.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>迷路指示送信</title>
+    <title>迷路指示</title>
     <link rel="stylesheet" href="sendcommand.css">
 </head>
 <body>
