--- a/student.html
+++ b/student.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h2>迷路指示送信</h2>
+    <h2>コマンド送信</h2>
     
     <div class="input-group">
         <label>名前</label>
@@ -17,7 +17,7 @@
 
     <div class="input-group">
         <label>指示（前進：F、右進：R、左進：L）</label>
-        <input type="text" id="inputCommand" placeholder="FFRFL">
+        <textarea id="inputCommand" placeholder="FFRFL..." rows="5"></textarea>
     </div>
 
     <button id="sendBtn">送信</button>
