--- a/instructor.html
+++ b/instructor.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 
+    <h1>プログラミング基礎研修</h1>
+    <br><br>
     <div class="header">
-        <h1>受信指示</h1>
+        <h2>指示受信</h2>
         <button id="resetBtn" class="danger-btn">リセット</button>
     </div>
 
