--- a/student.html
+++ b/student.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <h2>コマンド送信</h2>
+    <h1>プログラミング基礎研修</h1>
+    <br><br>
+    <h2>迷路指示</h2>
     
     <div class="input-group">
         <label>名前</label>
