--- a/student.html
+++ b/student.html
@@ -14,7 +14,7 @@
     
     <div class="input-group">
         <label>名前</label>
-        <input type="text" id="inputName" placeholder="山田 太郎">
+        <input type="text" id="inputName" placeholder="YAMADA TARO">
     </div>
 
     <div class="input-group">
