--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     </div>
 
     <script src="script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/confetti.browser.min.js"></script>
 </body>
 </html>
