--- a/instructor.html
+++ b/instructor.html
@@ -15,6 +15,7 @@
         <button id="resetBtn" class="danger-btn">リセット</button>
     </div>
 
+    <!-- cardを表示するdiv -->
     <div id="results"></div>
 
     <script type="module" src="sendcommand.js"></script>
