--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </div>
 
     <script src="script.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/confetti.browser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="message.js"></script>
 </body>
 </html>
