--- a/instructor.html
+++ b/instructor.html
@@ -18,9 +18,6 @@
     <!-- cardを表示するdiv -->
     <div id="results"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="message.js"></script>
-    <script src="sendcommand.js"></script>
-
+    <script type="module" src="sendcommand.js"></script>
 </body>
 </html>
