--- a/student.html
+++ b/student.html
@@ -24,9 +24,6 @@
 
     <button id="sendBtn">送信</button>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="message.js"></script>
-    <script src="sendcommand.js"></script>
-
+    <script type="module" src="sendcommand.js"></script>
 </body>
 </html>
