--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="message.js"></script>
-	<script src="script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/confetti.browser.min.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
