--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<div class="control-group">
 	    <label for="commandInput">指示でその方向に1マス進む (F:前, R:右, L:左) </label>
 	    <div style="display: flex; gap: 5px;">
-	        <input type="text" id="commandInput" value="" style="width: 150px; text-transform: uppercase;" placeholder="例: FFRF">
+            <input type="text" id="commandInput" value="" style="width:  350px; text-transform: uppercase;" placeholder="例: FFRF">
+            <button id="btnClear">クリア</button>
 	        <button id="btnCommand">実行</button>
             <button id="btnReset" style="background-color: #6c757d;">リセット</button>
 	    </div>
